--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.8",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "sequelize": "^3.30.4"
   },
   "engines": {
     "node": "^6.9.4"
-  }
+  },
+  "devDependencies": {}
 }
